--- a/index.html
+++ b/index.html
@@ -1,99 +1,25 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-PT">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vítor Fernandes PT Online</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Vítor Fernandes PT Online – Emagrecimento Feminino</title>
+  <meta name="description" content="PT Online especializado em emagrecimento feminino. Planos de treino e alimentação com acompanhamento. Fala comigo no WhatsApp.">
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #000;
-      color: #fff;
-      text-align: center;
+    :root{
+      --bg:#0a0a0a;
+      --card:#141414;
+      --text:#f5f5f5;
+      --muted:#bbbbbb;
+      --accent:#ff1a1a;
+      --accent-2:#ff4d4d;
+      --danger:#ff4d4d;
     }
-    header {
-      background: #e60000;
-      padding: 20px;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 28px;
-    }
-    header p {
-      margin: 5px 0 0;
-      font-size: 16px;
-    }
-    .pacotes {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 40px 20px;
-    }
-    .pacote {
-      border: 2px solid #e60000;
-      border-radius: 8px;
-      padding: 20px;
-      background: #111;
-    }
-    .pacote h2 {
-      color: #e60000;
-      margin-bottom: 10px;
-    }
-    .botao {
-      display: inline-block;
-      margin: 10px 5px;
-      padding: 12px 20px;
-      background: #e60000;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 5px;
-      font-weight: bold;
-    }
-    .botao:hover {
-      background: #b30000;
-    }
-    footer {
-      margin-top: 30px;
-      padding: 15px;
-      background: #111;
-      font-size: 14px;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Vítor Fernandes</h1>
-    <p>PT Online | Especialista em Emagrecimento Feminino</p>
-  </header>
-
-  <section class="pacotes">
-    <div class="pacote">
-      <h2>Pacote 1</h2>
-      <p>Plano de treino <b>ou</b> alimentação <br> (sem acompanhamento).</p>
-    </div>
-    <div class="pacote">
-      <h2>Pacote 2</h2>
-      <p>Plano de treino <b>ou</b> alimentação <br> com acompanhamento.</p>
-    </div>
-    <div class="pacote">
-      <h2>Pacote 3</h2>
-      <p>Plano de treino <b>ou</b> alimentação <br> com acompanhamento <br> + plano extra sem acompanhamento.</p>
-    </div>
-    <div class="pacote">
-      <h2>Pacote 4</h2>
-      <p>Plano de treino <b>e</b> alimentação <br> ambos com acompanhamento.</p>
-    </div>
-  </section>
-
-  <section>
-    <a class="botao" href="https://wa.me/351919283532" target="_blank">📲 WhatsApp</a>
-    <a class="botao" href="https://instagram.com/vitorfernandespt" target="_blank">📸 Instagram</a>
-    <a class="botao" href="mailto:vitor_fernandes@live.com.pt" target="_blank">✉️ Email</a>
-  </section>
-
-  <footer>
-    <p>© 2025 Vítor Fernandes - Todos os direitos reservados.</p>
-  </footer>
-</body>
-</html>
+    *{box-sizing:border-box}
+    html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif;scroll-behavior:smooth}
+    a{color:inherit;text-decoration:none}
+    .container{width:min(1120px,92%);margin:0 auto}
+    header{position:sticky;top:0;z-index:50;background:rgba(10,10,10,.8);backdrop-filter:blur(8px);border-bottom:1px solid #23232a}
+    nav{display:flex;align-items:center;justify-content:space-between;padding:12px 0}
+    nav .brand{display:flex;gap:10px;align-items:center}
+    .logo{width:34px;height:34px;border-radius:8px;background:linear-gradient(135deg,var(--accent),var(--accent-2));display:grid;place-items:center;co
