--- a/index.html
+++ b/index.html
@@ -4,235 +4,134 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Vítor Fernandes | PT Online – Emagrecimento Feminino</title>
-  <meta name="description" content="PT Online especializado em emagrecimento feminino. Planos de treino e alimentação com acompanhamento próximo. Fala comigo no WhatsApp.">
+  <meta name="description" content="PT Online especializado em emagrecimento feminino. Planos de treino e alimentação com acompanhamento próximo.">
   <meta name="theme-color" content="#e60000">
-  <!-- Open Graph / Social -->
-  <meta property="og:title" content="Vítor Fernandes | PT Online – Emagrecimento Feminino">
-  <meta property="og:description" content="Emagrece de forma simples e ganha confiança — sem dietas malucas. Planos de treino + alimentação com acompanhamento.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://vitorfernandespt.github.io/vitorfernandespt/">
-  <!-- Favicon VF (base64, vermelho) -->
-  <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='64' height='64'%3E%3Crect width='100%25' height='100%25' rx='12' ry='12' fill='%23e60000'/%3E%3Ctext x='50%25' y='58%25' font-family='Arial' font-weight='800' font-size='36' text-anchor='middle' fill='%230a0a0a'%3EVF%3C/text%3E%3C/svg%3E">
+
+  <!-- Meta Pixel Code -->
+  <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+     fbq('init', '1301438085435954'); 
+     fbq('track', 'PageView');
+  </script>
+  <noscript>
+    <img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=1301438085435954&ev=PageView&noscript=1"/>
+  </noscript>
+  <!-- End Meta Pixel Code -->
+
   <style>
-    :root{
-      --bg:#0a0a0a;--card:#121214;--muted:#b9c0cf;--text:#f6f7fb;
-      --accent:#e60000;--accent-2:#ff3b3b;--line:#23232a;
-      --ok:#25D366;
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #000;
+      color: #fff;
     }
-    *{box-sizing:border-box}
-    html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font-family:Inter,system-ui,Segoe UI,Roboto,Arial,sans-serif;scroll-behavior:smooth}
-    a{color:inherit;text-decoration:none}
-    .container{width:min(1120px,92%);margin:0 auto}
-    /* header / nav */
-    header{position:sticky;top:0;z-index:50;background:rgba(10,10,10,.85);backdrop-filter:blur(8px);border-bottom:1px solid var(--line)}
-    nav{display:flex;align-items:center;justify-content:space-between;padding:12px 0}
-    .brand{display:flex;gap:12px;align-items:center}
-    .logo{width:36px;height:36px;border-radius:10px;background:linear-gradient(135deg,var(--accent),var(--accent-2));display:grid;place-items:center;color:#0b0b0b;font-weight:800}
-    .brand small{color:var(--muted)}
-    .navlinks{display:flex;gap:12px;flex-wrap:wrap}
-    .chip{border:1px solid #2b2e39;background:#101116;color:#cfd5e6;border-radius:999px;padding:8px 12px;font-size:13px}
-    .cta{display:inline-flex;align-items:center;gap:8px;background:var(--accent);color:#0b0b0b;padding:12px 16px;border-radius:12px;font-weight:700;border:0;cursor:pointer}
-    .cta.dark{background:#22252f;color:var(--text);border:1px solid #2f3341}
-    /* hero */
-    .hero{padding:64px 0 18px}
-    .badge{display:inline-flex;gap:8px;align-items:center;background:#0f1014;border:1px solid #262832;color:#cbd1de;border-radius:999px;padding:8px 12px;font-size:12px}
-    h1{font-size:clamp(30px,7vw,46px);line-height:1.1;margin:18px 0 10px}
-    .lead{color:var(--muted);font-size:18px;max-width:900px}
-    .actions{display:flex;flex-wrap:wrap;gap:12px;margin-top:16px}
-    /* sections / cards */
-    section{padding:42px 0}
-    .grid{display:grid;gap:16px}
-    @media(min-width:880px){
-      .grid.cols-3{grid-template-columns:repeat(3,1fr)}
-      .grid.cols-4{grid-template-columns:repeat(4,1fr)}
+    header {
+      padding: 20px;
+      text-align: center;
+      background: #111;
     }
-    .card{background:var(--card);border:1px solid var(--line);border-radius:16px;padding:22px}
-    .card h3{margin:0 0 8px}
-    .muted{color:var(--muted)}
-    .sep{height:1px;background:var(--line);margin:22px 0}
-    /* planos */
-    .plans .card{display:grid;gap:10px}
-    .kicker{font-size:12px;letter-spacing:.14em;color:#ff8d8d;text-transform:uppercase}
-    .btn{display:inline-block;padding:12px 16px;border-radius:12px;font-weight:700;background:var(--accent);color:#0b0b0b}
-    .btn.ghost{background:#22252f;color:var(--text);border:1px solid #2f3341}
-    /* depoimentos */
-    .quote{display:grid;gap:10px}
-    .quote p{margin:0}
-    .who{display:flex;gap:12px;align-items:center}
-    .avatar{width:40px;height:40px;border-radius:50%;background:#1a1b21;border:1px solid #2b2e39}
-    /* FAQ */
-    details{background:#111318;border:1px solid #242634;padding:14px 16px;border-radius:12px}
-    summary{cursor:pointer;font-weight:700}
-    /* sticky actions */
-    .sticky{position:fixed;right:18px;bottom:18px;z-index:60;display:flex;flex-direction:column;gap:10px}
-    .wa{background:var(--ok);color:#06270f}
-    .ig{background:linear-gradient(135deg,#f58529,#dd2a7b,#8134af,#515bd4);color:#fff}
-    footer{padding:38px 0;border-top:1px solid var(--line);color:#9aa1b3;text-align:center}
+    header h1 {
+      margin: 0;
+      font-size: 22px;
+    }
+    .nav {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 10px;
+    }
+    .nav a {
+      color: #ccc;
+      text-decoration: none;
+      font-size: 14px;
+    }
+    .nav a:hover {
+      color: #fff;
+    }
+    .hero {
+      text-align: center;
+      padding: 40px 20px;
+    }
+    .hero h2 {
+      font-size: 26px;
+      font-weight: bold;
+    }
+    .hero h2 span {
+      color: #e60000;
+    }
+    .btn {
+      display: inline-block;
+      margin: 10px 5px;
+      padding: 12px 20px;
+      border-radius: 6px;
+      font-size: 16px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .whatsapp {
+      background: #25D366;
+      color: #000;
+    }
+    .instagram {
+      background: #333;
+      color: #fff;
+    }
+    .card {
+      background: #111;
+      border: 1px solid #333;
+      padding: 20px;
+      margin: 20px;
+      border-radius: 8px;
+    }
+    footer {
+      background: #111;
+      text-align: center;
+      padding: 20px;
+      font-size: 14px;
+      color: #888;
+    }
   </style>
 </head>
 <body>
-  <!-- NAV -->
+
   <header>
-    <div class="container">
-      <nav>
-        <div class="brand">
-          <div class="logo">VF</div>
-          <div>
-            <strong>Vítor Fernandes</strong><br>
-            <small>PT Online • Emagrecimento Feminino</small>
-          </div>
-        </div>
-        <div class="navlinks">
-          <a class="chip" href="#planos">Planos</a>
-          <a class="chip" href="#beneficios">Benefícios</a>
-          <a class="chip" href="#faq">Dúvidas</a>
-          <a class="cta" href="#contacto">Fala comigo</a>
-        </div>
-      </nav>
+    <h1>Vítor Fernandes</h1>
+    <p>PT Online · Emagrecimento Feminino</p>
+    <div class="nav">
+      <a href="#planos">Planos</a>
+      <a href="#beneficios">Benefícios</a>
+      <a href="#duvidas">Dúvidas</a>
     </div>
   </header>
 
-  <main>
-    <!-- HERO -->
-    <section class="hero">
-      <div class="container">
-        <span class="badge">Especialista em mulheres 30–35 • Resultados reais</span>
-        <h1>Emagrece de forma simples e <span style="color:var(--accent)">ganha confiança</span> — sem dietas malucas</h1>
-        <p class="lead">
-          Ajudo mulheres ocupadas a perder gordura, tonificar glúteos e abdómen e sentir-se seguras no próprio corpo. Planos de treino + alimentação com acompanhamento próximo.
-        </p>
-        <div class="actions">
-          <a class="cta wa" href="https://wa.me/351919283532?text=Olá%20Vítor!%20Quero%20saber%20mais%20sobre%20o%20acompanhamento%20para%20emagrecimento%20feminino." target="_blank" rel="noopener">Falar no WhatsApp</a>
-          <a class="cta dark ig" href="https://instagram.com/vitorfernandespt" target="_blank" rel="noopener">Enviar DM no Instagram</a>
-        </div>
-        <p class="muted" style="margin-top:8px">Lugares limitados • Acompanhamento 100% online • Email: <a href="mailto:vitor_fernandes@live.com.pt">vitor_fernandes@live.com.pt</a></p>
-      </div>
-    </section>
+  <section class="hero">
+    <p>Especialista em mulheres 30–35 · Resultados reais</p>
+    <h2>Emagrece de forma simples e <span>ganha confiança</span> — sem dietas malucas</h2>
+    <p>Ajudo mulheres ocupadas a perder gordura, tonificar glúteos e abdómen e sentir-se seguras no próprio corpo. 
+    Planos de treino + alimentação com acompanhamento próximo.</p>
 
-    <!-- BENEFÍCIOS -->
-    <section id="beneficios">
-      <div class="container grid cols-3">
-        <div class="card">
-          <h3>Plano 100% personalizado</h3>
-          <p class="muted">Treino e alimentação adaptados à tua rotina, gostos e nível. Nada de “copy-paste”.</p>
-        </div>
-        <div class="card">
-          <h3>Foco em autoestima</h3>
-          <p class="muted">Resultados sustentáveis e mentais: menos ansiedade com a comida, mais confiança no espelho.</p>
-        </div>
-        <div class="card">
-          <h3>Acompanhamento próximo</h3>
-          <p class="muted">Check-ins, ajustes e suporte para nunca ficares perdida — comigo do teu lado.</p>
-        </div>
-      </div>
-    </section>
+    <a href="https://wa.me/351932000000" class="btn whatsapp" onclick="fbq('track', 'ContactWhatsApp')">Falar no WhatsApp</a>
+    <a href="https://instagram.com/vitorfernandespt" class="btn instagram" onclick="fbq('track', 'ContactInstagram')">Enviar DM no Instagram</a>
 
-    <!-- PLANOS -->
-    <section id="planos">
-      <div class="container">
-        <div class="grid cols-4 plans">
-          <div class="card">
-            <span class="kicker">Essencial</span>
-            <h3>Plano de Treino <em>ou</em> Alimentação</h3>
-            <ul class="muted">
-              <li>Plano único</li>
-              <li>Sem acompanhamento</li>
-            </ul>
-            <a class="btn" href="https://wa.me/351919283532?text=Quero%20o%20Plano%20Essencial" target="_blank">Quero este</a>
-          </div>
-          <div class="card">
-            <span class="kicker">Acompanhado</span>
-            <h3>Plano de Treino <em>ou</em> Alimentação</h3>
-            <ul class="muted">
-              <li>Com acompanhamento</li>
-              <li>Ajustes e suporte contínuo</li>
-            </ul>
-            <a class="btn" href="https://wa.me/351919283532?text=Quero%20o%20Plano%20Acompanhado" target="_blank">Quero este</a>
-          </div>
-          <div class="card">
-            <span class="kicker">Avançado</span>
-            <h3>Plano de Treino <em>ou</em> Alimentação + Plano extra</h3>
-            <ul class="muted">
-              <li>1 plano com acompanhamento</li>
-              <li>+ 1 plano sem acompanhamento</li>
-            </ul>
-            <a class="btn" href="https://wa.me/351919283532?text=Quero%20o%20Plano%20Avançado" target="_blank">Quero este</a>
-          </div>
-          <div class="card">
-            <span class="kicker">Completo</span>
-            <h3>Plano de Treino <em>e</em> Alimentação</h3>
-            <ul class="muted">
-              <li>Ambos com acompanhamento</li>
-              <li>Ajustes, feedback e suporte regular</li>
-            </ul>
-            <a class="btn" href="https://wa.me/351919283532?text=Quero%20o%20Plano%20Completo" target="_blank">Começar agora</a>
-          </div>
-        </div>
-      </div>
-    </section>
+    <p>Lugares limitados · Acompanhamento 100% online.</p>
+  </section>
 
-    <!-- DEPOIMENTOS -->
-    <section>
-      <div class="container">
-        <h2>O que dizem as minhas alunas</h2>
-        <div class="sep"></div>
-        <div class="grid cols-3">
-          <div class="card quote">
-            <p>“Em 8 semanas perdi 6,2 kg e voltei a vestir as calças que adorava. O plano encaixou na minha rotina de mãe.”</p>
-            <div class="who"><div class="avatar"></div><div><strong>Sara, 34</strong><div class="muted">Lisboa</div></div></div>
-          </div>
-          <div class="card quote">
-            <p>“Nunca mais fiz dieta maluca. Aprendi a comer sem culpa e o treino é rápido e eficaz.”</p>
-            <div class="who"><div class="avatar"></div><div><strong>Patrícia, 31</strong><div class="muted">Porto</div></div></div>
-          </div>
-          <div class="card quote">
-            <p>“O apoio fez a diferença. Sempre que travava, o Vítor ajustava o plano e mantinha-me focada.”</p>
-            <div class="who"><div class="avatar"></div><div><strong>Inês, 35</strong><div class="muted">Braga</div></div></div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- FAQ -->
-    <section id="faq">
-      <div class="container">
-        <h2>Dúvidas frequentes</h2>
-        <div class="sep"></div>
-        <div class="grid">
-          <details><summary>Não tenho muito tempo. Isto serve para mim?</summary><p class="muted">Sim — construo o plano à volta da tua agenda. Poucos exercícios eficazes e alimentação simples.</p></details>
-          <details><summary>Preciso de ginásio?</summary><p class="muted">Posso montar treino para casa (elásticos/halteres) ou para ginásio — como preferires.</p></details>
-          <details><summary>Em quanto tempo vejo resultados?</summary><p class="muted">Em 3–4 semanas a maioria já sente diferença na energia, medidas e roupas.</p></details>
-          <details><summary>Como é o acompanhamento?</summary><p class="muted">Check-ins regulares por WhatsApp, ajustes de treino/planos e suporte sempre que precisares.</p></details>
-        </div>
-      </div>
-    </section>
-
-    <!-- CONTACTO -->
-    <section id="contacto">
-      <div class="container card" style="text-align:center">
-        <h2>Pronta para começar?</h2>
-        <p class="muted">Clica e fala comigo agora. Vou guiar-te passo a passo até ao teu objetivo.</p>
-        <div class="actions" style="justify-content:center">
-          <a class="btn wa" href="https://wa.me/351919283532?text=Olá%20Vítor!%20Quero%20começar%20o%20acompanhamento." target="_blank">WhatsApp</a>
-          <a class="btn ig" href="https://instagram.com/vitorfernandespt" target="_blank">Instagram</a>
-          <a class="btn ghost" href="mailto:vitor_fernandes@live.com.pt">Email</a>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <!-- STICKY CTA -->
-  <div class="sticky">
-    <a class="cta wa" href="https://wa.me/351919283532?text=Olá%20Vítor!%20Quero%20começar%20o%20acompanhamento." target="_blank">WhatsApp</a>
-    <a class="cta ig" href="https://instagram.com/vitorfernandespt" target="_blank">Instagram</a>
-  </div>
+  <section class="card" id="planos">
+    <h3>Plano 100% personalizado</h3>
+    <p>Treino e alimentação adaptados à tua rotina, gostos e nível. Nada de “copy-paste”.</p>
+  </section>
 
   <footer>
-    © <span id="y"></span> Vítor Fernandes • PT Online. Todos os direitos reservados.
+    <p>© 2025 Vítor Fernandes – Todos os direitos reservados</p>
   </footer>
 
-  <script>
-    document.getElementById('y').textContent = new Date().getFullYear();
-  </script>
 </body>
 </html>
